# core

./: .gitignore  CMakeLists.txt  Makefile  README.md
header/: core.h  stream.h
source/: core-x86_64.asm  core-x86_64.c  core-x86_64.h  core.c  core.h
test/: CMakeLists.txt
